[package]
name = "skip-pub-ip-poc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "p2p-node"
path = "src/main.rs"

[dependencies]
libp2p = { version = "0.53", features = ["tcp", "quic", "noise", "yamux", "kad", "identify", "relay", "dcutr", "ping", "macros", "async-std"] }
tokio = { version = "1", features = ["full"] }
async-std = { version = "1.12", features = ["attributes"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
