[package]
name = "btdht_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "btdht_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime", "attributes"] }
mainline = "0.5"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
hex = "0.4"
